conluded youtube clone dio porco

--- a/Programmi_VSCode/html_css/youtube.html
+++ b/Programmi_VSCode/html_css/youtube.html
@@ -395,7 +395,166 @@
                         </div>
                     </div>   
                 </div>
-   </div> 
-   
+                <div class="video-preview">
+                    <div class="video-img">
+                        <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
+                            <img class="thumbnail" src="thumbnails/thumbnail-9.webp" alt="thumbnail-9">
+                        </a>
+                        <div class="video-time">13:17</div>
+                    </div>
+                    <div class="video-info-grid">
+                        <div class="video-icon">
+                            <div class="profile-icon-container">
+                                <a href="https://www.youtube.com/c/OFFICIALTHENXSTUDIOS">
+                                    <img class="icon" src="channel-icons/channel-9.jpeg" alt="channel9">
+                                </a> 
+                                <div class="channel-tooltip">
+                                    <img class="icon-tooltip" src="channel-icons/channel-9.jpeg" alt="channel9">
+                                    <div>
+                                        <p class="channel-tool-name"><strong>ThenX</strong></p>
+                                        <p class="channel-subs">7,72M subscribers</p>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class="video-texts">
+                            <div class="title-name">
+                                <a  class="video-title" href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
+                                    The SECRET to Super Human STRENGTH</a>
+                            </div>
+                            <div class="channel-name">
+                                <p class="channel">
+                                    ThenX
+                                    </p>    
+                            </div>
+                            <div class="view-old">  
+                                <p class="visual">
+                                    20M views 	&#183; 3 years ago
+                                    </p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+                <div class="video-preview">
+                    <div class="video-img">
+                        <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
+                            <img class="thumbnail" src="thumbnails/thumbnail-10.webp" alt="thumbnail-10">
+                        </a>
+                        <div class="video-time">7:53</div>
+                    </div>
+                    <div class="video-info-grid">
+                        <div class="video-icon">
+                            <div class="profile-icon-container">
+                                <a href="https://www.youtube.com/user/businessinsider">
+                                    <img class="icon" src="channel-icons/channel-10.jpeg" alt="channel10">
+                                </a> 
+                                <div class="channel-tooltip">
+                                    <img class="icon-tooltip" src="channel-icons/channel-10.jpeg" alt="channel10">
+                                    <div>
+                                        <p class="channel-tool-name"><strong>Business Insider</strong></p>
+                                        <p class="channel-subs">8,83M subscribers</p>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class="video-texts">
+                            <div class="title-name">
+                                <a  class="video-title" href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
+                                    How The World's largest Cruise Ship Makes 30&comma;000 Meals Every Day</a>
+                            </div>
+                            <div class="channel-name">
+                                <p class="channel">
+                                    Business Insider
+                                    </p>    
+                            </div>
+                            <div class="view-old">  
+                                <p class="visual">
+                                    14M views 	&#183; 1 years ago
+                                    </p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+                <div class="video-preview">
+                    <div class="video-img">
+                        <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
+                            <img class="thumbnail" src="thumbnails/thumbnail-11.webp" alt="thumbnail-11">
+                        </a>
+                        <div class="video-time">4:10</div>
+                    </div>
+                    <div class="video-info-grid">
+                        <div class="video-icon">
+                            <div class="profile-icon-container">
+                                <a href="https://www.youtube.com/c/Destinationtips">
+                                    <img class="icon" src="channel-icons/channel-11.jpeg" alt="channel11">
+                                </a> 
+                                <div class="channel-tooltip">
+                                    <img class="icon-tooltip" src="channel-icons/channel-11.jpeg" alt="channel11">
+                                    <div>
+                                        <p class="channel-tool-name"><strong>Destination Tips</strong></p>
+                                        <p class="channel-subs">282k subscribers</p>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class="video-texts">
+                            <div class="title-name">
+                                <a  class="video-title" href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
+                                    Dubai's Crazy Underwater Train and Other Things &#x23;Only in Dubai</a>
+                            </div>
+                            <div class="channel-name">
+                                <p class="channel">
+                                    Destination Tips
+                                    </p>    
+                            </div>
+                            <div class="view-old">  
+                                <p class="visual">
+                                    3M views 	&#183; 1 years ago
+                                    </p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+                <div class="video-preview">
+                    <div class="video-img">
+                        <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
+                            <img class="thumbnail" src="thumbnails/thumbnail-12.webp" alt="thumbnail-12">
+                        </a>
+                        <div class="video-time">4:10</div>
+                    </div>
+                    <div class="video-info-grid">
+                        <div class="video-icon">
+                            <div class="profile-icon-container">
+                                <a href="https://www.youtube.com/teded">
+                                    <img class="icon" src="channel-icons/channel-12.jpeg" alt="channel12">
+                                </a> 
+                                <div class="channel-tooltip">
+                                    <img class="icon-tooltip" src="channel-icons/channel-12.jpeg" alt="channel12">
+                                    <div>
+                                        <p class="channel-tool-name"><strong>TED-Ed</strong></p>
+                                        <p class="channel-subs">19,5M subscribers</p>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class="video-texts">
+                            <div class="title-name">
+                                <a  class="video-title" href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
+                                    What would happen if you didn't drink water? - Mia Nacamulli</a>
+                            </div>
+                            <div class="channel-name">
+                                <p class="channel">
+                                    TED-Ed
+                                    </p>    
+                            </div>
+                            <div class="view-old">  
+                                <p class="visual">
+                                    12M views 	&#183; 5 years ago
+                                    </p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+            </div> 
     </body>
 </html>
